fixed build, removed dependencies

--- a/source/gl_wrapper/CMakeLists.txt
+++ b/source/gl_wrapper/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 
-project(test_engine_lib)
+project(gl_wrapper)
 
 add_catalog_recursive(${PROJECT_SOURCE_DIR} /Source SOURCE)
 
@@ -10,4 +10,5 @@ if(IOS_BUILD)
 
 endif()
 
+link_project_at_path(geometry  ${geometry_path} )
 link_project_at_path(cpp_utils ${cpp_utils_path})
