--- a/source/gl_wrapper/CMakeLists.txt
+++ b/source/gl_wrapper/CMakeLists.txt
@@ -4,6 +4,13 @@ project(gl_wrapper)
 
 add_catalog_recursive(${PROJECT_SOURCE_DIR} /Source SOURCE)
 
+include_directories(/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS12.1.sdk/System/Library/Frameworks/Foundation.framework/Headers/)
+include_directories(/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS12.1.sdk/System/Library/Frameworks/OpenGLES.framework/Headers/)
+
+set(CMAKE_C_FLAGS   "-x objective-c")
+set(CMAKE_CXX_FLAGS "-x objective-c++")
+#set(CMAKE_EXE_LINKER_FLAGS "-framework Foundation")
+
 add_library(${PROJECT_NAME} ${SOURCE})
 
 if(IOS_BUILD)
