--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,9 @@ add_definitions(-DDEBUG=1)
 conan_basic_setup()
 
 add_subdirectory(source/gl_wrapper)
-add_subdirectory(source/gl_wrapper_test)
+if(${DESKTOP_BUILD})
+  add_subdirectory(source/gl_wrapper_test)
+endif()
 
 if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_SOURCE_DIR})
   foreach(var ${GIT_DEPENDENCIES})
