--- a/source/gl_wrapper/CMakeLists.txt
+++ b/source/gl_wrapper/CMakeLists.txt
@@ -19,3 +19,5 @@ add_library(${PROJECT_NAME} ${SOURCE})
 
 link_project_at_path(geometry  ${geometry_path} )
 link_project_at_path(cpp_utils ${cpp_utils_path})
+
+conan_target_link_libraries(${PROJECT_NAME})
