--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,9 @@ set(CMAKE_CXX_STANDARD 17)
 
 project(gl_wrapper)
 
+if(${NEEDS_CONAN})
 conan_basic_setup()
+endif()
 
 add_subdirectory(source/gl_wrapper)
 if(${DESKTOP_BUILD})
