--- a/source/gl_wrapper_test/CMakeLists.txt
+++ b/source/gl_wrapper_test/CMakeLists.txt
@@ -9,4 +9,6 @@ add_executable(${PROJECT_NAME} ${SOURCE})
 link_project_at_path(cpp_utils  ${cpp_utils_path} )
 link_project_at_path(gl_wrapper ${gl_wrapper_path})
 
+if(${NEEDS_CONAN})
 conan_target_link_libraries(${PROJECT_NAME})
+endif()
