--- a/source/gl_wrapper/CMakeLists.txt
+++ b/source/gl_wrapper/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 
-project(gl_wrapper)
-
-add_catalog_recursive(${PROJECT_SOURCE_DIR} /Source SOURCE)
+setup_lib(gl_wrapper)
 
 if(IOS_BUILD)
 
@@ -11,15 +9,8 @@ include_directories(/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneO
 
 set(CMAKE_C_FLAGS   "-x objective-c")
 set(CMAKE_CXX_FLAGS "-x objective-c++")
-#set(CMAKE_EXE_LINKER_FLAGS "-framework Foundation")
 
 endif()
-
-add_library(${PROJECT_NAME} ${SOURCE})
 
 link_project_at_path(geometry  ${geometry_path} )
 link_project_at_path(cpp_utils ${cpp_utils_path})
-
-if(${NEEDS_CONAN})
-conan_target_link_libraries(${PROJECT_NAME})
-endif()
