--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,10 @@ if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_SOURCE_DIR})
 	include(build/build_tools_generated.cmake)
 endif()
 
-project(gl_wrapper)
-
-setup_conan_if_needed()
-setup_deps()
+setup_project(gl_wrapper)
 
 add_subdirectory(source/gl_wrapper)
+
 if(${DESKTOP_BUILD})
   add_subdirectory(source/gl_wrapper_test)
 endif()
